// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SFC analyze <script> bindings > auto name inference > basic 1`] = `
"import { toDisplayString as _toDisplayString } from "vue";
export default {
    __name: "FooBar",
    render (_ctx, _cache, $props, $setup, $data, $options) {
        return _toDisplayString(a);
    },
    setup () {
        const a = 1;
        return {
            a
        };
    }
};
"
`;

exports[`SFC analyze <script> bindings > auto name inference > do not overwrite manual name (call) 1`] = `
"import { defineComponent } from 'vue';
import { toDisplayString as _toDisplayString } from "vue";
export default {
    name: 'Baz',
    render (_ctx, _cache, $props, $setup, $data, $options) {
        return _toDisplayString(a);
    },
    setup () {
        const a = 1;
        return {
            a
        };
    }
};
"
`;

exports[`SFC analyze <script> bindings > auto name inference > do not overwrite manual name (object) 1`] = `
"import { toDisplayString as _toDisplayString } from "vue";
export default {
    name: 'Baz',
    render (_ctx, _cache, $props, $setup, $data, $options) {
        return _toDisplayString(a);
    },
    setup () {
        const a = 1;
        return {
            a
        };
    }
};
"
`;
